<resources>
    <string name="app_name">Budgets</string>
    <string name="title_new">New Budget</string>
    <string name="title_search">Search Budget</string>
    <string name="title_company">Company Profile</string>
    <string name="title_settings">Settings</string>
    <string name="label_company_name">Company Name</string>
    <string name="label_company_contact">Company Contact</string>
    <string name="label_company_email">Company Email</string>
    <string name="label_owner_name">Owner Name</string>
    <string name="label_company_address">Company Address</string>
    <string name="label_zip_code">Postal Code</string>
    <string name="label_location">Location</string>
    <string name="label_customer_name">Customer Name</string>
    <string name="label_customer_contact">Customer Contact</string>
    <string name="label_customer_email">Customer Email</string>
    <string name="label_budget_date">Budget Date</string>
    <string name="label_day">Day</string>
    <string name="label_month">Month</string>
    <string name="label_year">Year</string>
    <string name="label_budget_title">Budget Title</string>
    <string name="label_travel_distance">Travel Distance</string>
    <string name="placeholder_travel_distance">Insert the travel distance in kilometers to the workplace</string>
    <string name="label_travel_price">Travel Price</string>
    <string name="placeholder_travel_price">Insert the price per one kilometer travelled</string>
    <string name="label_parking">Parking</string>
    <string name="label_work_time">Work Time</string>
    <string-array name="array_time1">
        <item>Days</item>
        <item>Hours</item>
        <item>Minutes</item>
    </string-array>
    <string-array name="array_time2">
        <item>day</item>
        <item>hour</item>
        <item>minute</item>
    </string-array>
    <string name="label_labor_quantity">Labor Quantity</string>
    <string name="label_labor_price">Labor Price</string>
    <string name="label_total_service">Total Service</string>
    <string name="placeholder_labor_price">Insert the payment of one person</string>
    <string name="label_discount">Discount</string>
    <string name="label_total_budget">Total of the Budget</string>
    <string name="label_obs">Observations</string>
    <string name="label_save">Save</string>
    <string name="title_material">Material</string>
    <string name="title_work">Work</string>
    <string name="placeholder_labor_quantity">Insert the amount of people</string>
    <string name="placeholder_parking">Insert the parking cost</string>
    <string name="label_send">Send</string>
    <string name="label_add">Add</string>
    <string name="label_remove">Remove</string>
    <string name="label_area">Area</string>
    <string name="label_unit">Unit</string>
    <string name="label_price_unit">Price per Unit</string>
    <string name="label_quantity">Quantity</string>
    <string name="label_total_price">Total Price</string>
    <string name="label_per">per</string>
    <string name="label_finish">Finish</string>
    <string name="label_update">Update</string>
    <string name="label_search">Search</string>
    <string name="title_information">Information</string>
    <string name="placeholder_search_area">Search area</string>
    <string name="placeholder_search_material">Search material</string>
    <string name="placeholder_search_unit">Search unit</string>
    <string name="placeholder_price_unit">Insert the price per unit of the material</string>
    <string name="placeholder_quantity">Insert the quantity of the material</string>
    <string name="placeholder_budget_title">Insert the budget title</string>
    <string name="placeholder_customer_name">Insert the customer\'s name</string>
    <string name="placeholder_customer_contact">Inser the customer\'s contact</string>
    <string name="placeholder_customer_email">Insert the customer\'s email</string>
    <string name="placeholder_work_time">Insert the work time</string>
    <string name="placeholder_discount">Insert the discount</string>
    <string name="placeholder_total_budget">The total of the budget</string>
    <string name="placeholder_obs">Insert observations</string>
    <string name="placeholder_company_name">Insert the company\'s name</string>
    <string name="placeholder_owner_name">Insert the owner\'s name</string>
    <string name="placeholder_company_contact">Insert the company\'s contact</string>
    <string name="placeholder_company_email">Insert the company\'s email</string>
    <string name="placeholder_company_address">Insert the company\'s address</string>
    <string name="placeholder_postal_code">Insert the company\'s postal code</string>
    <string name="placeholder_company_location">Insert the company\'s location</string>
    <string name="label_search_for">Search for</string>
    <string name="label_successfully_updated">Successfully updated</string>
    <string name="label_not_updated">No updated</string>
    <string name="label_close">Close</string>
    <string name="label_ok" translatable="false">Ok</string>
</resources>